overflow fix again

--- a/src/component/User/Profile/styles.css
+++ b/src/component/User/Profile/styles.css
@@ -172,8 +172,8 @@
     text-shadow: 1px 1px 4px black;
 }
 
-.profile-title-overflow-fix{
-    max-width: 20em;
+.title-overflow-fix{
+    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
